# web-assembly-workshop

./: .gitignore  Cargo.toml  README.md
backend/c/: README.md  main.c
backend/go/: README.md  main.go  wasmer.toml
backend/lib/: Cargo.toml  README.md  universal-lib.wai  wasmer.toml
backend/lib/src/: lib.rs
backend/lib2/: README.md  main.go  universal-lib-go.wai  wasmer.toml
backend/rust/: Cargo.toml
backend/soup/: README.md  index.js  index.mjs  package-lock.json  package.json
backend/soup/src/chart/: main.py
backend/soup/src/manual-interfacing/: c-hello.js  go-hello.js
frontend/broth/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/broth/src/: App.css  App.tsx  manual-interface.js
frontend/oxi/: Cargo.toml
frontend/oxi/src/: app.rs  db.rs  lib.rs  main.rs
modules/: FULLSTACK.md
modules/backend/: index.js  package-lock.json  package.json
modules/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
modules/frontend/public/: universal_lib.wasm
modules/frontend/src/: App.css  App.js  App.tsx  LoadWasm.tsx  main.tsx  workaround-import.ts
modules/lib/: README.md
workshop/: agenda.md  script.md  ~$WasmWorkshop.pptx
workshop/resources/: famous_wasm_ports.md  history_of_wasm.md  wasm_support_in_langs.md  what_is_wasm.md
