[package]
name = "universal_lib"
version = "0.1.4"
edition = "2021"
description = "Universal cargo library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wai-bindgen-rust = "0.2.3"

[package.metadata.wasmer]
namespace = "sadramoh"                                              # same as your wasmer.io account handle
abi = "wasi"                                                        # choose "wasi" for both javascript and python bindings
bindings = { wai-version = "0.1.0", exports = "universal-lib.wai" } # should not contain `_` underscores
